--- a/openday_scavenger/views/admin/templates/layout.html
+++ b/openday_scavenger/views/admin/templates/layout.html
@@ -8,6 +8,7 @@
         <link href="/static/css/fontawesome.min.css" rel="stylesheet"/>
         <link href="/static/css/solid.min.css" rel="stylesheet"/>
         <link href="/static/css/openday.css" rel="stylesheet"/>
+        <link href="static/admin.css" rel="stylesheet"/>
 
         <meta charset="utf-8" />   <!--It is necessary to use the UTF-8 encoding with plotly graphics to get e.g. negative signs to render correctly -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
