add basic linting to HTML templates

--- a/openday_scavenger/puzzles/element/templates/popup.html
+++ b/openday_scavenger/puzzles/element/templates/popup.html
@@ -1,6 +1,6 @@
 <div id="element-popup" class="popup">
   <div class="popup-content">
-    <span class="close">&times;</span>
+    <span class="close">×</span>
     <h2 id="element-name" class="element-name"></h2>
 
     <div class="element-details-wrapper">
