--- a/openday_scavenger/views/admin/templates/layout.html
+++ b/openday_scavenger/views/admin/templates/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Australian Synchrotron Open Day Scavenger Hunt :: Admin</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -16,8 +17,6 @@
     <link href="static/admin.css" rel="stylesheet" />
 
     <meta charset="utf-8" />
-    <!--It is necessary to use the UTF-8 encoding with plotly graphics to get e.g. negative signs to render correctly -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     {% block header %}{% endblock %}
@@ -91,9 +90,9 @@
                             </a>
                         </li>
                     </ul>
-                    <img src="/static/images/logo.svg" class="mt-auto mb-3 d-none d-sm-block">
+                    <img src="/static/images/logo.svg" class="mt-auto mb-3 d-none d-sm-block" alt="ANSTO logo with text">
                     <img src="/static/images/logo-small.svg" class="mt-auto mb-3 ms-2 me-auto d-sm-none"
-                        style="width: 60px;">
+                        style="width: 60px;" alt="ANSTO logo">
                 </div>
             </aside>
             <div class="col py-3 admin-page-content">
