--- a/openday_scavenger/views/admin/templates/map.html
+++ b/openday_scavenger/views/admin/templates/map.html
@@ -11,7 +11,6 @@
             map</a> for visitors!</small>
 </h1>
 
-
 <div class="my-4 mx-3 p-3 bg-body shadow-sm admin-panel-container">
     <h5 class="border-bottom pb-2 mb-0">Generate Puzzle Location String</h5>
 
@@ -39,7 +38,7 @@
     </div>
 
     <div id="map-editor" class="map-admin">
-        <img src="/static/images/map/as_layout.svg" class="map-svg" />
+        <img src="/static/images/map/as_layout.svg" class="map-svg" alt="puzzle map"/>
     </div>
 </div>
 
