--- a/openday_scavenger/views/game/static/index.html
+++ b/openday_scavenger/views/game/static/index.html
@@ -54,7 +54,6 @@
         Puzzle locks will only be within accessible areas!
     </p>
 
-
     <p class="text-secondary mt-5">Need some help finding puzzle locks?<br />
         <a href="/map">Use our map to see where all the puzzle locks are!</a>
     </p>
@@ -69,7 +68,7 @@
     </p>
 
     <div class="d-flex justify-content-center">
-        <img src="{{visitor_qr}}" width="50%" class="bg-white" style="margin-bottom: 150px; margin-top: 40px;" />
+        <img src="{{visitor_qr}}" width="50%" class="bg-white" style="margin-bottom: 150px; margin-top: 40px;" alt="QR code of adventure key" />
     </div>
     {% endif %}
 
