--- a/openday_scavenger/views/game/static/puzzle_completed.html
+++ b/openday_scavenger/views/game/static/puzzle_completed.html
@@ -29,7 +29,7 @@
     </p>
 
     <div class="d-flex justify-content-center">
-        <img src="{{visitor_qr}}" width="50%" class="bg-white" style="margin-bottom: 150px; margin-top: 40px;" />
+        <img src="{{visitor_qr}}" width="50%" class="bg-white" style="margin-bottom: 150px; margin-top: 40px;" alt="QR code of puzzle adventure key"/>
     </div>
     {% endif %}
 </div>
