--- a/openday_scavenger/puzzles/element/templates/index.html
+++ b/openday_scavenger/puzzles/element/templates/index.html
@@ -1,5 +1,6 @@
 {% set title = "🧈 " + location + " Element Quiz 🪨" %}
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
