--- a/openday_scavenger/puzzles/shuffleanagram/templates/index.html
+++ b/openday_scavenger/puzzles/shuffleanagram/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Anagram Puzzle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
