--- a/openday_scavenger/views/admin/templates/qr.html
+++ b/openday_scavenger/views/admin/templates/qr.html
@@ -1,3 +1,3 @@
 <body>
-    <img src="{{ qr }}" width="500px" height="500px"/>
+    <img src="{{ qr }}" width="500px" height="500px" alt="QR code"/>
 </body>
