--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- <h1>Finder Puzzle</h1> -->
-    <h1 id="question"> 🔍 Can you find the hidden treasure? </h1>
+    <h1 id="question" class="heading-h1"> 🔍 Can you find the hidden treasure? </h1>
     <h2 id="question">{{question}} </h2>
     <h5 id="hint" data-num="{{data['words']|length}}"> Select letters in order to build a word. 😎</h5>
     <h5>😏 Use the button below to add words to your answer! 👇</h5>
