make HTML attribute quoting consistent
- Also remove some trailing spaces in files

--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -46,7 +46,7 @@
 
     <div class="form-parent">
         {% include 'found_words.html' %}
-        <div class='form-button-container'>
+        <div class="form-button-container">
             <button id="btn-add" class="btn btn-outline-primary rounded-pill mx-2" type="button">
                 <i class="fa-solid fa-plus"></i> Add
                 to answer
