--- a/openday_scavenger/puzzles/labelthemap/templates/index.html
+++ b/openday_scavenger/puzzles/labelthemap/templates/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <form id='form' method='POST' action='/submission' class="text-center">
+    <form id="form" method="POST" action="/submission" class="text-center">
         <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
         <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
         <input hidden type="text" id="answer" name="answer" value="">
