--- a/openday_scavenger/puzzles/shuffleanagram/templates/index.html
+++ b/openday_scavenger/puzzles/shuffleanagram/templates/index.html
@@ -28,7 +28,7 @@
         </button>
     </div>
 
-    <form id='form' method='POST' action='/submission' class="text-center">
+    <form id="form" method="POST" action="/submission" class="text-center">
         <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
         <div class="form-group mb-1">
             <label for="raw-answer">Your answer:</label><br>
