--- a/openday_scavenger/views/admin/templates/puzzles_edit_modal.html
+++ b/openday_scavenger/views/admin/templates/puzzles_edit_modal.html
@@ -4,7 +4,7 @@
         <h1 class="modal-title fs-5">Edit Puzzle</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
-      <form id='puzzle-edit-form' class="mt-3" hx-encoding='multipart/form-data' hx-put='/admin/puzzles/{{ puzzle.name }}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">
+      <form id="puzzle-edit-form" class="mt-3" hx-encoding="multipart/form-data" hx-put="/admin/puzzles/{{ puzzle.name }}" hx-ext="json-enc" hx-swap="innerHTML" hx-target="#puzzle-table">
           <div class="modal-body">
               <div class="container">
                   <div class="row">
@@ -13,19 +13,19 @@
                               <label for="name" class="form-label">Name:</label>
                               <input type="text" id="inputName" name="name" class="form-control" value="{{ puzzle.name }}">
                           </div>
-                          
+
                           <div class="mb-3">
                               <label for="name" class="form-label">Location:</label>
                               <input type="text" id="inputLocation" name="location" class="form-control" value="{{ puzzle.location }}">
                           </div>
                       </div>
-                      
+
                       <div class="col">
                           <div class="mb-3">
                               <label for="name" class="form-label">Answer:</label>
                               <input type="text" id="inputAnswer" name="answer" class="form-control" value="{{ puzzle.answer }}">
                           </div>
-  
+
                           <div class="mb-3">
                               <label for="name" class="form-label">Notes:</label>
                               <input type="text" id="inputNotes" name="notes" class="form-control" value="{{ puzzle.notes }}">
