--- a/openday_scavenger/views/admin/templates/visitors_pool.html
+++ b/openday_scavenger/views/admin/templates/visitors_pool.html
@@ -8,7 +8,7 @@
 
 <div class="my-4 mx-3 p-3 bg-body shadow-sm admin-panel-container">
     <h5 class="border-bottom pb-2 mb-0">Visitor Pool</h5>
-    <form id='visitor-pool-form' class="mt-3" hx-encoding='multipart/form-data' hx-post='/admin/visitors/pool' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-pool-table"> 
+    <form id="visitor-pool-form" class="mt-3" hx-encoding="multipart/form-data" hx-post="/admin/visitors/pool" hx-ext="json-enc" hx-swap="innerHTML" hx-target="#visitor-pool-table">
         <div class="mb-3">
             <label for="number_of_entries" class="form-label">Number of UIDs:</label>
             <input type="number" id="number_of_entries" name="number_of_entries" class="form-control" value="10">
